# ros_object_server

./: .travis.yml  CMakeLists.txt  README.md  package.xml
config/: example.yaml
include/object_server/: object_server.hpp
launch/: example.launch
src/: object_server.cpp
srv/: SetMarkers.srv
